# snippetor

./: .gitignore  CHANGES.md  README.md  dune-project  snippetor  snippetor.opam
.github/workflows/: build.yml
examples/: Makefile  example.ml  test.agda
src/: dune  snippetor.ml
