(lang dune 2.0)
(name snippetor)
(version 0.1.0)
(generate_opam_files true)
(authors "Samuel Mimram <smimram@gmail.com>")
(maintainers "Samuel Mimram <smimram@gmail.com>")
(source (github "smimram/snippetor"))
(homepage "https://github.com/smimram/snippetor/")
(bug_reports "https://github.com/smimram/snippetor/issues")
(package
 (name snippetor)
 (synopsis "Extract excerpts from code")
 (description "Snippettor is a tool to extract excerpts from code (for now OCaml and Agda are supported). It can typically be used in order to include portions of code in LaTeX files, while ensuring that it is compiling.")
)
